# tiny-bignum-c

./: .clang-format  Makefile  meson.build
include/: bn.h
src/: bn.c
tests/: factorial.c  golden.c  hand_picked.c  load_cmp.c  randomized.c  rsa.c  test_div_algo.c
